# TelegramFUSE

./: .gitignore  Dockerfile.ubuntu  README.md  docker-compose.yaml
source/: CMakeLists.txt  main.cpp  metaFile.txt  metaFolder.txt
source/fuse/: CMakeLists.txt  localfilesystem.cpp  localfilesystem.h  main.cpp
source/tg_bot/: CMakeLists.txt  filesystemmeta.cpp  filesystemmeta.h  localfilesystem.cpp  localfilesystem.h  main.cpp
